--- a/Source/MyMoney/Charts/HistoryBarChart.xaml
+++ b/Source/MyMoney/Charts/HistoryBarChart.xaml
@@ -58,7 +58,8 @@
     <Grid>
         <ComboBox x:Name="RangeCombo" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10" />
         <charting:Chart   x:Name="AreaChart" >
-            <charting:ColumnSeries x:Name="SeriesAmount" DataPointStyle="{StaticResource AmountStyle}" 
+            <charting:ColumnSeries x:Name="SeriesAmount" 
+                            DataPointStyle="{StaticResource AmountStyle}" 
                             DependentValuePath="Amount"  
                             Title="Amount"
                             IndependentValuePath="Label"                                                                
