Show the CLIENTUID field of the online account and fix a bug where CLIENTUID is not supported on OFX version 1 connections (this solves problems with UMB Bank).

--- a/Source/MyMoney/Dialogs/OnlineAccountDialog.xaml
+++ b/Source/MyMoney/Dialogs/OnlineAccountDialog.xaml
@@ -123,6 +123,8 @@
                     <RowDefinition Height="8"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="8"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="8"/>
 
                 </Grid.RowDefinitions>
                                 
@@ -166,6 +168,8 @@
                 <TextBlock Text="App Version:" Grid.Column="0" Grid.Row="20" HorizontalAlignment="Right" />
                 <TextBox x:Name="TextBoxAppVersion" Text="{Binding Path=AppVersion}" Grid.Column="2" Grid.Row="20" Grid.ColumnSpan="2" />
 
+                <TextBlock Text="Client UID:" Grid.Column="0" Grid.Row="22" HorizontalAlignment="Right" />
+                <TextBox x:Name="TextBoxClientUid" Text="{Binding Path=ClientUid}" Grid.Column="2" Grid.Row="22" Grid.ColumnSpan="2" />
             </Grid>
 
             <Grid x:Name="AccountListPanel" Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  Visibility="Collapsed" >
