--- a/Source/MyMoney/Dialogs/AccountDialog.xaml
+++ b/Source/MyMoney/Dialogs/AccountDialog.xaml
@@ -7,7 +7,7 @@
         xmlns:help="clr-namespace:Walkabout.Help"
         help:HelpService.HelpKeyword="Setup Accounts"
         Title="Account" 
-        MinHeight="320" MaxHeight="500" MinWidth="400"  
+        MinHeight="320" MaxHeight="600" MinWidth="400"  
         ShowInTaskbar="False"  
         WindowStartupLocation="CenterOwner" 
         Background="{DynamicResource DialogWindowBackgroundBrush}"  WindowStyle="ToolWindow" SizeToContent="WidthAndHeight"
@@ -23,6 +23,8 @@
             </Grid.ColumnDefinitions>
 
             <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="8"  />
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="8"  />
                 <RowDefinition Height="*"/>
@@ -55,11 +57,14 @@
             <TextBlock Text="Account Number:" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" />
             <TextBox x:Name="TextBoxAccountNumber" Grid.Column="2" Grid.Row="2" HorizontalAlignment="Stretch"  Text="{Binding Path=AccountId, Mode=TwoWay}" Height="22" TabIndex="1"/>
 
-            <TextBlock Text="Description:" Grid.Column="0" Grid.Row="4" HorizontalAlignment="Right" />
-            <TextBox x:Name="TextBoxDescription" Grid.Column="2" Grid.Row="4" HorizontalAlignment="Stretch" MinHeight="50"  Text="{Binding Path=Description, Mode=TwoWay}" Grid.ColumnSpan="2" Margin="0,0,0,7.105427357601E-15" TabIndex="2"/>
+            <TextBlock Text="Onliine Account Id:" Grid.Column="0" Grid.Row="4" HorizontalAlignment="Right" />
+            <TextBox x:Name="TextBoxOnlineAccountNumber" Grid.Column="2" Grid.Row="4" HorizontalAlignment="Stretch"  Text="{Binding Path=OfxAccountId, Mode=TwoWay}" Height="22" TabIndex="1"/>
 
-            <TextBlock Text="Account Type:" Grid.Column="0" Grid.Row="6" HorizontalAlignment="Right" />
-            <ComboBox x:Name="AccountTypeCombo" Grid.Column="2" Grid.Row="6"  Height="23"   Grid.ColumnSpan="2" VerticalAlignment="Top"   Text="{Binding Path=Type, Mode=TwoWay}" TabIndex="3">
+            <TextBlock Text="Description:" Grid.Column="0" Grid.Row="6" HorizontalAlignment="Right" />
+            <TextBox x:Name="TextBoxDescription" Grid.Column="2" Grid.Row="6" HorizontalAlignment="Stretch" MinHeight="50"  Text="{Binding Path=Description, Mode=TwoWay}" Grid.ColumnSpan="2" Margin="0,0,0,7.105427357601E-15" TabIndex="2"/>
+
+            <TextBlock Text="Account Type:" Grid.Column="0" Grid.Row="8" HorizontalAlignment="Right" />
+            <ComboBox x:Name="AccountTypeCombo" Grid.Column="2" Grid.Row="8"  Height="23"   Grid.ColumnSpan="2" VerticalAlignment="Top"   Text="{Binding Path=Type, Mode=TwoWay}" TabIndex="3">
                 <ComboBoxItem Content="Cash" />
                 <ComboBoxItem Content="Checking" />
                 <ComboBoxItem Content="Credit" />
@@ -69,13 +74,13 @@
                 <ComboBoxItem Content="Asset" />
             </ComboBox>
 
-            <CheckBox x:Name="CheckBoxTaxDeferred" Grid.Column="2" Grid.Row="7" IsChecked="{Binding Path=IsTaxDeferred, Mode=TwoWay}" TabIndex="12" Margin="0,3,0,3">Tax Deferred</CheckBox>
+            <CheckBox x:Name="CheckBoxTaxDeferred" Grid.Column="2" Grid.Row="9" IsChecked="{Binding Path=IsTaxDeferred, Mode=TwoWay}" TabIndex="12" Margin="0,3,0,3">Tax Deferred</CheckBox>
 
-            <TextBlock Text="Opening Balance:" Grid.Column="0" Grid.Row="8" HorizontalAlignment="Right" />
-            <TextBox x:Name="TextBoxOpeningBalance" Grid.Column="2" Grid.Row="8"  Text="{Binding Path=OpeningBalance, Mode=TwoWay}" Grid.ColumnSpan="2" TabIndex="4"/>
+            <TextBlock Text="Opening Balance:" Grid.Column="0" Grid.Row="10" HorizontalAlignment="Right" />
+            <TextBox x:Name="TextBoxOpeningBalance" Grid.Column="2" Grid.Row="10"  Text="{Binding Path=OpeningBalance, Mode=TwoWay}" Grid.ColumnSpan="2" TabIndex="4"/>
 
-            <TextBlock Text="Online Account:" Grid.Column="0" Grid.Row="10" HorizontalAlignment="Right" />
-            <Grid HorizontalAlignment="Stretch" Grid.Column="2" Grid.Row="10" Grid.ColumnSpan="2" >
+            <TextBlock Text="Online Account:" Grid.Column="0" Grid.Row="12" HorizontalAlignment="Right" />
+            <Grid HorizontalAlignment="Stretch" Grid.Column="2" Grid.Row="12" Grid.ColumnSpan="2" >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="Auto"/>
@@ -84,16 +89,14 @@
                            SelectionChanged="OnComboBoxOnlineAccount_SelectionChanged" TabIndex="5"/>
                 <Button Name="buttonOnlineAccountDetails" Grid.Column="1" Click="OnButtonOnlineAccountDetails_Click" TabIndex="6">>></Button>
             </Grid>
-            <TextBlock Text="Currency:" Grid.Column="0" Grid.Row="12" HorizontalAlignment="Right" />
-
-            <StackPanel Orientation="Horizontal" Grid.Column="2" Grid.Row="12"  Grid.ColumnSpan="3  ">
+            <TextBlock Text="Currency:" Grid.Column="0" Grid.Row="14" HorizontalAlignment="Right" />
+            <StackPanel Orientation="Horizontal" Grid.Column="2" Grid.Row="14"  Grid.ColumnSpan="3  ">
                 <ComboBox x:Name="ComboBoxCurrency"  Text="{Binding Path=Currency, Mode=TwoWay}" Height="22" TabIndex="7" Width="60" SelectionChanged="OnCurrencyChanged"/>
                 <TextBlock x:Name="TextRate" VerticalAlignment="Center" Width="150" Padding="2,3" Margin="5,0"  />
             </StackPanel>
 
-            <TextBlock Text="Web Site:" Grid.Column="0" Grid.Row="14" HorizontalAlignment="Right" />
-
-            <Grid  Grid.Column="2" Grid.Row="14" HorizontalAlignment="Stretch" Grid.ColumnSpan="2" Margin="0,0,0,7.105427357601E-15">
+            <TextBlock Text="Web Site:" Grid.Column="0" Grid.Row="16" HorizontalAlignment="Right" />
+            <Grid  Grid.Column="2" Grid.Row="16" HorizontalAlignment="Stretch" Grid.ColumnSpan="2" Margin="0,0,0,7.105427357601E-15">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="Auto" />
@@ -103,22 +106,22 @@
             </Grid>
 
 
-            <TextBlock Text="Reconcile Warning:" Grid.Column="0" Grid.Row="16" HorizontalAlignment="Right" />
-            <StackPanel Orientation="Horizontal" Grid.Column="2" Grid.Row="16" HorizontalAlignment="Stretch">
+            <TextBlock Text="Reconcile Warning:" Grid.Column="0" Grid.Row="18" HorizontalAlignment="Right" />
+            <StackPanel Orientation="Horizontal" Grid.Column="2" Grid.Row="18" HorizontalAlignment="Stretch">
                 <TextBox x:Name="TextBoxReconcileWarning" Text="{Binding Path=ReconcileWarning, Mode=TwoWay}" Height="22" Width="50" TabIndex="10"
                          ToolTip="Enter when you would like to see a warning reminding you to balance this account
 (for example, you might want this to be less than the number of statements kept by your bank)"/>
                 <TextBlock Text="months" VerticalAlignment="Center" Margin="10,0,0,0"/>
             </StackPanel>
 
-            <TextBlock Text="Include in budget:" Grid.Column="0" Grid.Row="18" HorizontalAlignment="Right" />
-            <CheckBox x:Name="CheckBoxIncludeInBudget" Grid.Column="2" Grid.Row="18" IsChecked="{Binding Path=IsBudgeted, Mode=TwoWay}" TabIndex="11" />
+            <TextBlock Text="Include in budget:" Grid.Column="0" Grid.Row="20" HorizontalAlignment="Right" />
+            <CheckBox x:Name="CheckBoxIncludeInBudget" Grid.Column="2" Grid.Row="20" IsChecked="{Binding Path=IsBudgeted, Mode=TwoWay}" TabIndex="11" />
 
-            <TextBlock Text="Closed:" Grid.Column="0" Grid.Row="20" HorizontalAlignment="Right" />
-            <CheckBox x:Name="CheckBoxClosed" Grid.Column="2" Grid.Row="20" IsChecked="{Binding Path=IsClosed, Mode=TwoWay}" TabIndex="12" />
+            <TextBlock Text="Closed:" Grid.Column="0" Grid.Row="22" HorizontalAlignment="Right" />
+            <CheckBox x:Name="CheckBoxClosed" Grid.Column="2" Grid.Row="22" IsChecked="{Binding Path=IsClosed, Mode=TwoWay}" TabIndex="12" />
 
-            <TextBlock Text="Last Download:" Grid.Column="0" Grid.Row="22" HorizontalAlignment="Right" />
-            <TextBox x:Name="TextBoxLastDownload" Text="{Binding Path=LastSyncDate, Mode=TwoWay}" Grid.Column="2" Grid.Row="22" Grid.ColumnSpan="2" />
+            <TextBlock Text="Last Download:" Grid.Column="0" Grid.Row="24" HorizontalAlignment="Right" />
+            <TextBox x:Name="TextBoxLastDownload" Text="{Binding Path=LastSyncDate, Mode=TwoWay}" Grid.Column="2" Grid.Row="24" Grid.ColumnSpan="2" />
 
         </Grid>
         
