--- a/Source/MyMoney/Dialogs/AccountDialog.xaml
+++ b/Source/MyMoney/Dialogs/AccountDialog.xaml
@@ -58,7 +58,8 @@
             <TextBox x:Name="TextBoxAccountNumber" Grid.Column="2" Grid.Row="2" HorizontalAlignment="Stretch"  Text="{Binding Path=AccountId, Mode=TwoWay}" Height="22" TabIndex="1"/>
 
             <TextBlock Text="Onliine Account Id:" Grid.Column="0" Grid.Row="4" HorizontalAlignment="Right" />
-            <TextBox x:Name="TextBoxOnlineAccountNumber" Grid.Column="2" Grid.Row="4" HorizontalAlignment="Stretch"  Text="{Binding Path=OfxAccountId, Mode=TwoWay}" Height="22" TabIndex="1"/>
+            <TextBox x:Name="TextBoxOnlineAccountNumber" Grid.Column="2" Grid.Row="4" HorizontalAlignment="Stretch"  Text="{Binding Path=OfxAccountId, Mode=TwoWay}" Height="22" TabIndex="1"
+                     ToolTip="Use this field if your bank uses a differently formatted string for your online account number"/>
 
             <TextBlock Text="Description:" Grid.Column="0" Grid.Row="6" HorizontalAlignment="Right" />
             <TextBox x:Name="TextBoxDescription" Grid.Column="2" Grid.Row="6" HorizontalAlignment="Stretch" MinHeight="50"  Text="{Binding Path=Description, Mode=TwoWay}" Grid.ColumnSpan="2" Margin="0,0,0,7.105427357601E-15" TabIndex="2"/>
