--- a/Source/WPF/MyMoney/View Selectors/AccountsControl.xaml
+++ b/Source/WPF/MyMoney/View Selectors/AccountsControl.xaml
@@ -21,6 +21,7 @@
         <local:AccountWarningVisibilityConverter x:Key="AccountWarningVisibilityConverter"/>
         <local:AccountWarningTooltipConverter x:Key="AccountWarningTooltipConverter"/>
         <local:AccountLastBalancedTooltipConverter x:Key="AccountLastBalancedTooltipConverter"/>
+        <local:AccountLastTransactionTooltipConverter x:Key="AccountLastTransactionTooltipConverter"/>
 
         <DataTemplate DataType="{x:Type localData:AccountSectionHeader}">
 
@@ -43,6 +44,7 @@
                         <TextBlock Text="{Binding Name}"/>
                         <TextBlock Text="{Binding AccountId}"/>
                         <TextBlock Text="{Binding LastBalance, Converter={StaticResource AccountLastBalancedTooltipConverter}}"/>
+                        <TextBlock Text="{Binding ., Converter={StaticResource AccountLastTransactionTooltipConverter}}"/>
                     </StackPanel>
                 </Grid.ToolTip>
                 <Grid.ColumnDefinitions>
