--- a/Source/WPF/MyMoney/Views/RentSummaryView.xaml
+++ b/Source/WPF/MyMoney/Views/RentSummaryView.xaml
@@ -6,7 +6,9 @@
              Background="White"
              VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
              mc:Ignorable="d" 
-             d:DesignWidth="300" DataContext="{Binding}">
+             d:DesignWidth="900" 
+             d:DesignHeight="600" 
+             DataContext="{Binding}">
 
     <UserControl.Resources>
 
@@ -73,9 +75,10 @@
         <!-- Show the numbers -->
         <Grid Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center"  >
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" SharedSizeGroup="A_Captions"/>
+                <ColumnDefinition Width="Auto" MinWidth="200" SharedSizeGroup="A_Captions"/>
                 <ColumnDefinition Width="Auto" MinWidth="100" SharedSizeGroup="B_AmountSmall"/>
-                <ColumnDefinition Width="Auto" MinWidth="80" SharedSizeGroup="C_AmountBig"/>
+                <ColumnDefinition Width="50" SharedSizeGroup="C_AmountBig"/>
+                <ColumnDefinition Width="50"/>
             </Grid.ColumnDefinitions>
 
             <Grid.RowDefinitions>
@@ -83,7 +86,7 @@
                 <RowDefinition Height="Auto" />
 
                 <!-- GAP -->
-                <RowDefinition Height="20" />
+                <RowDefinition Height="40" />
 
                 <!-- EXPENSES -->
                 <RowDefinition Height="Auto" />
@@ -94,7 +97,7 @@
                 <RowDefinition Height="20" />
 
                 <!-- GAP -->
-                <RowDefinition Height="20" />
+                <RowDefinition Height="40" />
 
                 <!-- PROFITS -->
                 <RowDefinition Height="Auto" />
@@ -104,55 +107,50 @@
             </Grid.RowDefinitions>
 
             <!-- SEPERATOR -->
-            <Border Grid.Column="0" Grid.Row="0"  Grid.ColumnSpan="3" Grid.RowSpan="1" Style="{StaticResource Bucket}"/>
 
             <!-- INCOME -->
-            <TextBlock Grid.Column="0" Text="Income:" Style="{StaticResource SectionCaption}" TextAlignment="Right" VerticalAlignment="Bottom"  Margin="0,3,0,3" />
-            <TextBlock Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2" Text="{Binding TotalIncomes, StringFormat=\{0:C\}}"  TextAlignment="Right"  VerticalAlignment="Bottom" FontSize="24" Style="{StaticResource Income}" />
+            <TextBlock Grid.Column="0" Text="Income:" Style="{StaticResource SectionCaption}" TextAlignment="Right" VerticalAlignment="Bottom"  />
+            <TextBlock Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="3" Text="{Binding TotalIncomes, StringFormat=\{0:C\}}"  TextAlignment="Right"  VerticalAlignment="Bottom" FontSize="24" Style="{StaticResource Income}"  />
 
 
-            <!-- SEPERATOR -->
-            <Border Grid.Column="0" Grid.Row="2"  Grid.ColumnSpan="3" Grid.RowSpan="6" Style="{StaticResource Bucket}"/>
 
             <!-- EXPENSES -->
             <TextBlock Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="1" Text="Expense:" TextAlignment="Right"  Style="{StaticResource SectionCaption}" />
-            <TextBlock Grid.Column="1" Grid.Row="2" Text="{Binding TotalExpenses, StringFormat=\{0:C\}}"  TextAlignment="Right"  FontSize="24" Grid.ColumnSpan="2" Style="{StaticResource Expense}" />
+            <TextBlock Grid.Column="1" Grid.Row="2" Text="{Binding TotalExpenses, StringFormat=\{0:C\}}"  TextAlignment="Right"  FontSize="24" Grid.ColumnSpan="3" Style="{StaticResource Expense}" />
 
             <!-- EXPENSES TAXES -->
-            <TextBlock Grid.Column="0" Grid.Row="3" Text="Taxes:" TextAlignment="Right"  Opacity=".55" Style="{StaticResource TextStyle}"/>
-            <TextBlock Grid.Column="1" Grid.Row="3" Text="{Binding TotalExpensesTaxes, StringFormat=\{0:C\}}"  TextAlignment="Right"    Style="{StaticResource Expense}" Opacity=".55"/>
+            <TextBlock Grid.Column="0" Grid.Row="3" Text="Taxes:" TextAlignment="Right"  Opacity=".80" Style="{StaticResource TextStyle}"  Grid.RowSpan="2"/>
+            <TextBlock Grid.Column="1" Grid.Row="3" Text="{Binding TotalExpensesTaxes, StringFormat=\{0:C\}}"  TextAlignment="Right"    Style="{StaticResource Expense}" Opacity=".80"  Grid.RowSpan="2"/>
 
             <!-- EXPENSES REPAIRS -->
-            <TextBlock Grid.Column="0" Grid.Row="4" Text="Repairs:" TextAlignment="Right"  Opacity=".55"  Style="{StaticResource TextStyle}"/>
-            <TextBlock Grid.Column="1" Grid.Row="4" Text="{Binding TotalExpensesRepairs, StringFormat=\{0:C\}}"  TextAlignment="Right"    Style="{StaticResource Expense}" Opacity=".55"/>
+            <TextBlock Grid.Column="0" Grid.Row="4" Text="Repairs:" TextAlignment="Right"  Opacity=".80"  Style="{StaticResource TextStyle}"  Grid.RowSpan="2"/>
+            <TextBlock Grid.Column="1" Grid.Row="4" Text="{Binding TotalExpensesRepairs, StringFormat=\{0:C\}}"  TextAlignment="Right"    Style="{StaticResource Expense}" Opacity=".80" Grid.RowSpan="2"/>
 
             <!-- EXPENSES MAINTENANCE -->
-            <TextBlock Grid.Column="0" Grid.Row="5" Text="Maintenance:" TextAlignment="Right"  Opacity=".55" Style="{StaticResource TextStyle}"/>
-            <TextBlock Grid.Column="1" Grid.Row="5" Text="{Binding TotalExpensesMaintenance, StringFormat=\{0:C\}}"  TextAlignment="Right"  Style="{StaticResource Expense}" Opacity=".55"/>
+            <TextBlock Grid.Column="0" Grid.Row="5" Text="Maintenance:" TextAlignment="Right"  Opacity=".80" Style="{StaticResource TextStyle}"  Grid.RowSpan="2"/>
+            <TextBlock Grid.Column="1" Grid.Row="5" Text="{Binding TotalExpensesMaintenance, StringFormat=\{0:C\}}"  TextAlignment="Right"  Style="{StaticResource Expense}" Opacity=".80" Grid.RowSpan="2"/>
 
             <!-- EXPENSES MANAGMENT -->
-            <TextBlock Grid.Column="0" Grid.Row="6" Text="Management:" TextAlignment="Right"  Opacity=".55" Style="{StaticResource TextStyle}" />
-            <TextBlock Grid.Column="1" Grid.Row="6" Text="{Binding TotalExpensesManagement, StringFormat=\{0:C\}}"  TextAlignment="Right"  Style="{StaticResource Expense}" Opacity=".55" />
+            <TextBlock Grid.Column="0" Grid.Row="6" Text="Management:" TextAlignment="Right"  Opacity=".80" Style="{StaticResource TextStyle}"  Grid.RowSpan="2" />
+            <TextBlock Grid.Column="1" Grid.Row="6" Text="{Binding TotalExpensesManagement, StringFormat=\{0:C\}}"  TextAlignment="Right"  Style="{StaticResource Expense}" Opacity=".80"  Grid.RowSpan="2" />
 
             <!-- EXPENSES INTEREST -->
-            <TextBlock Grid.Column="0" Grid.Row="7" Text="Mortgage Interest:" TextAlignment="Right"  Opacity=".55" Style="{StaticResource TextStyle}" />
-            <TextBlock Grid.Column="1" Grid.Row="7" Text="{Binding TotalExpensesInterest, StringFormat=\{0:C\}}"  TextAlignment="Right"   Style="{StaticResource Expense}" Opacity=".55" />
+            <TextBlock Grid.Column="0" Grid.Row="7" Text="Mortgage Interest:" TextAlignment="Right"  Opacity=".80" Style="{StaticResource TextStyle}"  Grid.RowSpan="2" />
+            <TextBlock Grid.Column="1" Grid.Row="7" Text="{Binding TotalExpensesInterest, StringFormat=\{0:C\}}"  TextAlignment="Right"   Style="{StaticResource Expense}" Opacity=".80"  Grid.RowSpan="2" />
 
 
-            <!-- SEPERATOR -->
-            <Border Grid.Column="0" Grid.Row="9"  Grid.ColumnSpan="3" Grid.RowSpan="3" Style="{StaticResource Bucket}"/>
 
             <!-- PROFIT -->
-            <TextBlock Grid.Column="0" Grid.Row="9" Text="Profit:" Style="{StaticResource SectionCaption}" Margin="0,3,0,3"/>
-            <TextBlock Grid.Column="1" Grid.Row="9" Text="{Binding TotalProfit, StringFormat=\{0:C\}}"  TextAlignment="Right"  VerticalAlignment="Center"  FontSize="24" Grid.ColumnSpan="2" />
+            <TextBlock Grid.Column="0" Grid.Row="9" Text="Profit:" Style="{StaticResource SectionCaption}"/>
+            <TextBlock Grid.Column="1" Grid.Row="9" Text="{Binding TotalProfit, StringFormat=\{0:C\}}"  TextAlignment="Right"  VerticalAlignment="Center"  FontSize="24" Grid.ColumnSpan="3" />
 
             <!-- PROFIT OWNER 1-->
-            <TextBlock Grid.Column="0" Grid.Row="10" Text="{Binding Owner1}" TextAlignment="Right" FontSize="13" Opacity=".55" Style="{StaticResource TextStyle}"/>
-            <TextBlock Grid.Column="1" Grid.Row="10" Text="{Binding TotalProfitOwner1, StringFormat=\{0:C\}}"  TextAlignment="Right"  FontSize="13"  Opacity=".55" Style="{StaticResource TextStyle}"/>
+            <TextBlock Grid.Column="0" Grid.Row="10" Text="{Binding Owner1}" TextAlignment="Right" FontSize="13" Opacity=".80" Style="{StaticResource TextStyle}"  Grid.RowSpan="2"/>
+            <TextBlock Grid.Column="1" Grid.Row="10" Text="{Binding TotalProfitOwner1, StringFormat=\{0:C\}}"  TextAlignment="Right"  FontSize="13"  Opacity=".80" Style="{StaticResource TextStyle}"  Grid.RowSpan="2"/>
 
             <!-- PROFIT OWNER 2-->
-            <TextBlock Grid.Column="0" Grid.Row="11" Text="{Binding Owner2}" TextAlignment="Right"  FontSize="13" Opacity=".55" Style="{StaticResource TextStyle}"/>
-            <TextBlock Grid.Column="1" Grid.Row="11" Text="{Binding TotalProfitOwner2, StringFormat=\{0:C\}}"  TextAlignment="Right"    FontSize="13"  Opacity=".55" Style="{StaticResource TextStyle}"/>
+            <TextBlock Grid.Column="0" Grid.Row="11" Text="{Binding Owner2}" TextAlignment="Right"  FontSize="13" Opacity=".80" Style="{StaticResource TextStyle}" />
+            <TextBlock Grid.Column="1" Grid.Row="11" Text="{Binding TotalProfitOwner2, StringFormat=\{0:C\}}"  TextAlignment="Right"    FontSize="13"  Opacity=".80" Style="{StaticResource TextStyle}"/>
 
         </Grid>
     </Grid>
