Update UnitPrice column more frequently based on OFX downloaded information.  Fix performance of row delete in transaction view by optimizing the rebalance column update.

--- a/Source/WPF/MyMoney/View Selectors/SecuritiesControl.xaml
+++ b/Source/WPF/MyMoney/View Selectors/SecuritiesControl.xaml
@@ -13,7 +13,6 @@
 
 
     <UserControl.Resources>
-        <c:NonzeroToFontBoldConverter x:Key="PayeeFontWeightConverter"/>
         
         <DataTemplate DataType="{x:Type localData:Security}">
             <Grid Name="ItemInTheList" >
@@ -35,8 +34,7 @@
                 <TextBlock Text="{Binding Name}" 
                            Grid.Column="0"
                            TextTrimming="CharacterEllipsis" 
-                           ClipToBounds="True"
-                           FontWeight="{Binding Flags, Converter={StaticResource PayeeFontWeightConverter}}"/>
+                           ClipToBounds="True"/>
                 
                 <TextBlock Text="{Binding Symbol}" 
                            Grid.Column="1"
