--- a/Source/WPF/MyMoney/Views/TransactionsView.xaml
+++ b/Source/WPF/MyMoney/Views/TransactionsView.xaml
@@ -1001,7 +1001,7 @@
 
                     <!-- FIFO TRACKING -->
                     <DataGridTemplateColumn Header="FIFO"  CellTemplate="{StaticResource myTemplateFifo}" 
-                                        SortMemberPath="RoutingPath" SortDirection="Ascending"/>
+                                        SortMemberPath="RoutingPath" />
 
 
                     <!-- UNITS -->
